Fix confirmation dialog z-index
The large avatar icon on conversations was being rendered on top of the
confirmation dialog.

// FREEBIE

--- a/stylesheets/manifest.css
+++ b/stylesheets/manifest.css
@@ -1024,7 +1024,8 @@ input.search {
   height: 100%;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.3);
-  padding: 0 20px; }
+  padding: 0 20px;
+  z-index: 10; }
   .confirmation-dialog .modal {
     max-width: 350px;
     margin: 100px auto;
